tooling/nargo_cli/tests/snapshots/execution_success/brillig_calls_conditionals/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u32; 3]):
    (no terminator instruction)
}
